<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="Main_Landscape"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtausgabe2"
        android:id="@+id/txtausgabe2"
        android:layout_gravity="right" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BB"
            android:id="@+id/button2"
            android:onClick="onClickBB"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BC"
            android:id="@+id/button5"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button2"
            android:onClick="onClickBC"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BD"
            android:id="@+id/button6"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button5"
            android:onClick="onClickBD"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BF"
            android:id="@+id/button7"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/button13"
            android:onClick="onClickBF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BE"
            android:id="@+id/button8"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button6"
            android:onClick="onClickBE"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B7"
            android:id="@+id/button9"
            android:layout_below="@+id/button2"
            android:layout_toStartOf="@+id/button6"
            android:onClick="onClickB7"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B6"
            android:id="@+id/button10"
            android:layout_alignTop="@+id/button9"
            android:layout_toStartOf="@+id/button9"
            android:onClick="onClickB6"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:id="@+id/button11"
            android:layout_below="@+id/button6"
            android:layout_toStartOf="@+id/button8"
            android:onClick="onClickB8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B9"
            android:id="@+id/button12"
            android:layout_below="@+id/button6"
            android:layout_toEndOf="@+id/button6"
            android:onClick="onClickB9"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BA"
            android:id="@+id/button13"
            android:layout_below="@+id/button7"
            android:layout_toEndOf="@+id/button12"
            android:onClick="onClickBA"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B1"
            android:id="@+id/button14"
            android:layout_below="@+id/button9"
            android:layout_alignParentStart="true"
            android:onClick="onClickB1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B3"
            android:id="@+id/button15"
            android:layout_alignTop="@+id/button16"
            android:layout_alignStart="@+id/button11"
            android:onClick="onClickB3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B2"
            android:id="@+id/button16"
            android:layout_alignTop="@+id/button14"
            android:layout_toEndOf="@+id/button14"
            android:onClick="onClickB2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B4"
            android:id="@+id/button17"
            android:layout_alignTop="@+id/button15"
            android:layout_alignStart="@+id/button12"
            android:onClick="onClickB4"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B5"
            android:id="@+id/button18"
            android:layout_alignTop="@+id/button17"
            android:layout_alignStart="@+id/button23"
            android:onClick="onClickB5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B0"
            android:id="@+id/button19"
            android:layout_below="@+id/button14"
            android:layout_toStartOf="@+id/button9"
            android:onClick="onClickB0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BResult"
            android:id="@+id/button20"
            android:layout_below="@+id/button15"
            android:layout_alignStart="@+id/button16"
            android:onClick="onClickResult"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BClear"
            android:id="@+id/button21"
            android:layout_below="@+id/button18"
            android:layout_toEndOf="@+id/button20"
            android:onClick="onClickClear"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BDivide"
            android:id="@+id/button22"
            android:layout_below="@+id/button18"
            android:layout_toEndOf="@+id/button21"
            android:onClick="onClickDivide"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B1X"
            android:id="@+id/button23"
            android:layout_below="@+id/button18"
            android:layout_toEndOf="@+id/button17"
            android:onClick="onClickDivX"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMultiply"
            android:id="@+id/button24"
            android:layout_alignBaseline="@+id/button18"
            android:layout_alignBottom="@+id/button18"
            android:layout_toEndOf="@+id/button7"
            android:onClick="onClickMultiply"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BSubstract"
            android:id="@+id/button25"
            android:layout_below="@+id/button7"
            android:layout_toEndOf="@+id/button7"
            android:onClick="onClickSubstract"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BAdd"
            android:id="@+id/button26"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button7"
            android:onClick="onClickAdd"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BX2"
            android:id="@+id/button28"
            android:layout_below="@+id/button18"
            android:layout_toEndOf="@+id/button18"
            android:onClick="onClickQuadX"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button21"
            android:text="resultTest"
            android:onClick="onClickListener_Hex" />

    </RelativeLayout>

</LinearLayout>
